<resources>
    <string name="app_name">Homelets</string>

    <string name="no_information">Sorry, no information</string>

    <string name="title_activity_main">Home lets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Login</string>
    <string name="action_forget">Forgot Password ?</string>
    <string name="action_go_to_sigh_up">New One ?  Go to Register !</string>
    <string name="action_sigh_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="Login_failed">Login failed</string>
    <string name="Login_success">Login successful</string>
    <string name="SignUp_failed">SignUp failed</string>
    <string name="SignUp_success">SignUp successful</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_not_valid_email">Invalid, please input Monash Email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="explain">Normally, the system recommends three food places:\n
        \u2022 First is the nearest and best place\n
        \u2022 Second is the nearest place\n
        \u2022 Third is the nearest place in your favourite list\nIf results are repeated, the repeated items will not be shown twice</string>
</resources>
